--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ pure_eval==0.2.3
 Pygments==2.18.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
-pywin32==308
+pypiwin32==308
 pyzmq==26.2.0
 requests==2.32.3
 rich==13.9.4
